...
      android:src="@drawable/colors"
      android:layout_width="299dp"
      android:layout_height="386dp" android:id="@+id/cardColors"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/UserNameInput"
      />
  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:hint="@string/enter_username"
      android:text=""
      android:ems="14"
      android:id="@+id/UserNameInput"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardColors"
      app:layout_constraintBottom_toTopOf="@+id/SubmitUserNameButton"
  />
  <Button
      android:text="@string/title_activity_create_user"
      android:layout_width="122dp"
      android:layout_height="wrap_content"
      android:id="@+id/SubmitUserNameButton"
...
