...
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                app:drawableEndCompat="@drawable/account"
                android:drawablePadding = "10dp"
...
