<resources>
    <string name="eng_Lang">English</string>
    <string name="ru_Lang">Русский</string>
    <string name="chooseLanguageTxt">Choose Language</string>
    <string name="title_startnewgame">Start New Game</string>
    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>
    <string name="Player3">Player 3</string>
    <string name="Player4">Player 4</string>
    <string name="EnterNewPlayer">Enter Player Names</string>
    <string name="heart_round">&#128148;</string>
    <string name="heart_round_active">&#10084;</string>
    <string name="underdog">&#128054;</string>
    <string name="end_game">End Game</string>
    <string name="add_round">Add Round</string>
    <string name="app_name">MulatschakTracker</string>
    <string name="title_activity_add_game_round">MulatschakTracker</string>
    <string name="title_games">Games</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_history">History</string>
    <string name="title_tips">Tips</string>
    <string name="title_options">Options</string>
    <string name="title_activity_create_user">Create User</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game">Game %1$d</string>
    <string name="players_signature" translatable="false">%1$s, %2$s, %3$s, %4$s</string>
    <string name="no_running_games">No Running Games</string>
    <string name="no_finished_games">No Finished Games</string>

    <string name="initial_game_stat_points" translatable="false">0</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_three">Player Three</string>
    <string name="player_four">Player Four</string>
    <string name="Victory">Victory!</string>
    <string name="FirstPlace"> took the cake</string>
    <string name="SecondPlace"> snacked some cake as well</string>
    <string name="ThirdPlace"> also got some cake</string>
    <string name="FourthPlace"> probably wont happen, ever</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Enter Username</string>
    <string name="end_round">End Round</string>
    <string name="dog_emoji" translatable="false">&#128054; %1$s</string>

    <string name="alert_delete_user">Are you sure you want to delete all your data. This step cannot be undone?</string>
    <string name="delete_user_button">Delete Account</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="p1_100">Someone over 100</string>
    <string name="p1_won">I won</string>
    <string name="p1_lost">I lost</string>
    <string name="back">Back</string>
</resources>